liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

#[test]
fn bindgen_test_layout_tagEvent() {
    assert_eq!(
        ::std::mem::size_of::<tagEvent>(),
        24usize,
        concat!("Size of: ", stringify!(tagEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<tagEvent>(),
        8usize,
        concat!("Alignment of ", stringify!(tagEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagEvent>())).uwEventID as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagEvent),
            "::",
            stringify!(uwEventID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagEvent>())).stEventList as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(tagEvent),
            "::",
            stringify!(stEventList)
        )
    );
}
#[doc = " @ingroup los_event"]
#[doc = " Event control structure"]
pub type EVENT_CB_S = tagEvent;
#[doc = " @ingroup los_event"]
#[doc = " Event control structure"]
pub type PEVENT_CB_S = *mut tagEvent;
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Initialize an event control block."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to initialize the event control block pointed to by eventCB."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventCB [IN/OUT] Pointer to the event control block to be initialized."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_EVENT_PTR_NULL  Null pointer."]
    #[doc = " @retval #LOS_OK                    The event control block is successfully initialized."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventClear"]
    pub fn LOS_EventInit(eventCB: PEVENT_CB_S) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Obtain an event specified by the event ID."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to check whether an event expected by the user occurs according to the event ID, event mask,"]
    #[doc = " and event reading mode, and process the event based on the event reading mode. The event ID must point to"]
    #[doc = " valid memory."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>When the mode is LOS_WAITMODE_CLR, the eventID is passed-out.</li>"]
    #[doc = " <li>Otherwise the eventID is passed-in.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventID      [IN/OUT] Pointer to the ID of the event to be checked."]
    #[doc = " @param eventMask    [IN] Mask of the event expected to occur by the user, indicating the event obtained after"]
    #[doc = " it is logically processed that matches the ID pointed to by mode."]
    #[doc = " @param mode         [IN] Event reading mode. The modes include LOS_WAITMODE_AND, LOS_WAITMODE_OR, LOS_WAITMODE_CLR."]
    #[doc = ""]
    #[doc = " @retval 0             The event expected by the user does not occur."]
    #[doc = " @retval #UINT32       The event expected by the user occurs."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventRead | LOS_EventWrite"]
    pub fn LOS_EventPoll(eventID: *mut UINT32, eventMask: UINT32, mode: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Read an event."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to block or schedule a task that reads an event of which the event control block, event mask,"]
    #[doc = " reading mode,"]
    #[doc = " and timeout information are specified."]
    #[doc = " </ul>"]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>An error code and an event return value can be same. To differentiate the error code and return value, bit 25 of"]
    #[doc = " the event mask is forbidden to be used.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventCB      [IN/OUT] Pointer to the event control block to be checked. This parameter must point to"]
    #[doc = "                              valid memory."]
    #[doc = " @param eventMask    [IN]     Mask of the event expected to occur by the user, indicating the event obtained after"]
    #[doc = "                              it is logically processed that matches the ID pointed to by eventID."]
    #[doc = " @param mode         [IN]     Event reading mode."]
    #[doc = " @param timeOut      [IN]     Timeout interval of event reading (unit: Tick)."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_EVENT_SETBIT_INVALID     Bit 25 of the event mask cannot be set because"]
    #[doc = "                                             it is set to an error number."]
    #[doc = " @retval #LOS_ERRNO_EVENT_EVENTMASK_INVALID  The passed-in event reading mode is incorrect."]
    #[doc = " @retval #LOS_ERRNO_EVENT_READ_IN_INTERRUPT  The event is being read during an interrupt."]
    #[doc = " @retval #LOS_ERRNO_EVENT_FLAGS_INVALID      The event mode is invalid."]
    #[doc = " @retval #LOS_ERRNO_EVENT_READ_IN_LOCK       The event reading task is locked."]
    #[doc = " @retval #LOS_ERRNO_EVENT_PTR_NULL           The passed-in pointer is null."]
    #[doc = " @retval 0                                   The event expected by the user does not occur."]
    #[doc = " @retval #UINT32                             The event expected by the user occurs."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventPoll | LOS_EventWrite"]
    pub fn LOS_EventRead(
        eventCB: PEVENT_CB_S,
        eventMask: UINT32,
        mode: UINT32,
        timeOut: UINT32,
    ) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Write an event."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to write an event specified by the passed-in event mask into an event control block"]
    #[doc = " pointed to by eventCB."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>To determine whether the LOS_EventRead API returns an event or an error code, bit 25 of the event mask"]
    #[doc = " is forbidden to be used.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventCB  [IN/OUT] Pointer to the event control block into which an event is to be written."]
    #[doc = " This parameter must point to valid memory."]
    #[doc = " @param events   [IN] Event mask to be written."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_EVENT_SETBIT_INVALID  Bit 25 of the event mask cannot be set to an event"]
    #[doc = " because it is set to an error code."]
    #[doc = " @retval #LOS_ERRNO_EVENT_PTR_NULL        Null pointer."]
    #[doc = " @retval #LOS_OK                          The event is successfully written."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventPoll | LOS_EventRead"]
    pub fn LOS_EventWrite(eventCB: PEVENT_CB_S, events: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Clear the event of the eventCB by a specified eventMask."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " <ul>"]
    #[doc = " <li>This API is used to set the ID of an event that has a specified mask and of which the information is stored in"]
    #[doc = " an event control block pointed to by eventCB to 0. eventCB must point to valid memory.</li>"]
    #[doc = " </ul>"]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The value of events needs to be reversed when it is passed-in.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventCB     [IN/OUT] Pointer to the event control block to be cleared."]
    #[doc = " @param eventMask   [IN]     Mask of the event to be cleared."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_EVENT_PTR_NULL  Null pointer."]
    #[doc = " @retval #LOS_OK                    The event is successfully cleared."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventPoll | LOS_EventRead | LOS_EventWrite"]
    pub fn LOS_EventClear(eventCB: PEVENT_CB_S, eventMask: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_event"]
    #[doc = " @brief Destroy an event."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " <ul>"]
    #[doc = " <li>This API is used to Destroy an event.</li>"]
    #[doc = " </ul>"]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The specific event should be a valid one.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param eventCB     [IN/OUT] Pointer to the event control block to be Destroyed."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_EVENT_PTR_NULL Null pointer."]
    #[doc = " @retval #LOS_OK                   The event is successfully cleared."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_event.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_EventPoll | LOS_EventRead | LOS_EventWrite"]
    pub fn LOS_EventDestroy(eventCB: PEVENT_CB_S) -> UINT32;
}
extern "C" {
    pub fn OsEventReadOnce(
        eventCB: PEVENT_CB_S,
        eventMask: UINT32,
        mode: UINT32,
        timeOut: UINT32,
    ) -> UINT32;
}
extern "C" {
    pub fn OsEventWriteOnce(eventCB: PEVENT_CB_S, events: UINT32) -> UINT32;
}
